--- a/Energy.App.Standalone/Pages/HtmlContentFiles/TermsAndConditionsContents.razor
+++ b/Energy.App.Standalone/Pages/HtmlContentFiles/TermsAndConditionsContents.razor
@@ -6,7 +6,9 @@
 <p>This Site is a serverless, standalone web application.</p>
 
 <h5>Intellectual Property</h5>
-<p>All designs, features and applications made available on our Site, as well as the source code at <a href="https://github.com/zola-25/Explain-My-Energy">https://github.com/zola-25/Explain-My-Energy</a>, is licensed under the open-source GNU Affero General Public License version 3 (AGPLv3).</p>
+<p>
+    All designs, features and applications made available on our Site, as well as the source code at <a href="https://github.com/zola-25/Explain-My-Energy">https://github.com/zola-25/Explain-My-Energy</a>, is licensed under the open-source Apache License 2.0 (Apache-2.0)
+</p>
 
 <h5>Acceptable Use</h5>
 <p>As a user of our Site, you agree to use our Site legally, not to use our Site for illegal purposes, and not to:</p>
