--- a/Energy.App.Standalone/Pages/HtmlContentFiles/WelcomeScreenContent.razor
+++ b/Energy.App.Standalone/Pages/HtmlContentFiles/WelcomeScreenContent.razor
@@ -3,7 +3,7 @@
 <MudPaper Class="pa-5">
     <MudText Typo="Typo.body1" Align="Align.Start">
         <div class="welcome-screen-content">
-            <p><strong>Explain My Energy</strong> is a free, open-source tool to help you understand both your existing
+            <p><strong>Explain My Energy</strong> is a free, open-source web application to help you understand both your existing
                 energy bills and your future energy costs and consumption.</p>
             <p>It is designed to be used by anyone, as long as you have a smart meter (it doesn't even have to be
                 working).</p>
@@ -18,18 +18,18 @@
             </ul>
 
             <br />
-
-            <p><strong>Explain My Energy</strong> doesn't sell energy; doesn't sell your data; it doesn't collect your
-                data.</p>
-            <p>There is no sign up, no login, no cookies, no tracking, no ads.</p>
-            <p>It uses the latest web browser technology to store and process everything on your device. </p>
-
-            <p>This is an initial <strong>beta version</strong> of the application. Feedback is much appreciated and
+            <p>
+                <strong>This is a hobby project, and a beta version of the application.</strong> Feedback is much appreciated and
                 will help determine whether the app provides enough value to warrant maintaining and developing further.
             </p>
-            <p> Advancements in AI offer interesting possibilities - tailored energy advice unique to each individual
-                and their home, for example.</p>
-            <p>So please feel free to email me at <a
+
+            <p>The app doesn't sell energy; doesn't sell your data; it doesn't collect your
+                data.</p>
+            <p>There is no sign up, no login, no cookies, no tracking, no ads.</p>
+            <p>The app uses Blazor WebAssembly process everything on your device.</p>
+            <p>To view a demo version, with setup pre-configured, go to <a href="https://demo.explainmyenergy.net">demo.explainmyenergy.net</a></p>
+            
+            <p>Please feel free to email me at <a
                     href="mailto:explainmyenergy@solores-software.net">explainmyenergy@solores-software.net</a> with any
                 problems, comments or suggestions.</p>
 
