--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/AddGasMeterPage.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/AddGasMeterPage.razor
@@ -5,29 +5,33 @@
 
 <MudGrid Justify="Justify.Center">
     <MudItem xs="12">
-        <MudPaper Elevation="2" Class="p-2 mt-2">
-            <MudTooltip ShowOnHover="true" Text="Return to Setup" >
-                <MudLink Underline="Underline.None"
-                         Href="@($"/Setup")">
-                    <MudButton Class="ma-1" Color="Color.Primary"
-                               ButtonType="ButtonType.Button"
-                               Variant="Variant.Filled"
-                               Size="Size.Small">
-                        <span><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> Back to Setup</span>
-                    </MudButton>
-                </MudLink>
+        <MudPaper Elevation="2" Class="mt-2">
+            <div class="d-flex justify-space-between mt-5 ">
+                <MudTooltip ShowOnHover="true" Text="Return to Setup">
+                    <MudLink Underline="Underline.None"
+                             Href="@($"/Setup")">
+                        <MudButton Class="ma-5" Color="Color.Default"
+                                   ButtonType="ButtonType.Button"
+                                   Variant="Variant.Filled"
+                                   Size="Size.Small">
+                            <span><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> Back to Setup</span>
+                        </MudButton>
+                    </MudLink>
                 </MudTooltip>
+            </div>
             <AddGasMeterFormComponent OnSuccessfulCallback="OnSuccessfulSave" />
         </MudPaper>
     </MudItem>
     @if (_showAuthorization)
     {
         <MudItem xs="12">
-            <MudTooltip Text="Proceed to Authorize Meter for data access?">
-                <MudLink Underline="Underline.None" Href="@($"/MeterAuthorization/{MeterType.Gas}")">
-                    <MudButton Color="Color.Primary" ButtonType="ButtonType.Button" Variant="Variant.Filled" Size="Size.Small">Authorize</MudButton>
-                </MudLink>
-            </MudTooltip>
+            <div class="d-flex justify-center">
+                <MudTooltip Text="Proceed to Authorize Meter for data access?">
+                    <MudLink Underline="Underline.None" Href="@($"/MeterAuthorization/{MeterType.Gas}")">
+                        <MudButton Color="Color.Success" ButtonType="ButtonType.Button" Variant="Variant.Filled" Size="Size.Small">Authorize</MudButton>
+                    </MudLink>
+                </MudTooltip>
+            </div>
         </MudItem>
     }
 </MudGrid>
