--- a/Energy.App.Standalone/Shared/MainLayout.razor
+++ b/Energy.App.Standalone/Shared/MainLayout.razor
@@ -72,10 +72,12 @@
                 SecondaryContrastText = Colors.Shades.White,
                 Tertiary = Colors.Orange.Darken4,
                 HoverOpacity = 0.3,
+                
             },
             Typography = new Typography
             {
-                Default = { FontFamily = new[] { "Open Sans", "Helvetica", "sans-serif" } }
+                Default = { FontFamily = new[] { "Open Sans", "Helvetica", "sans-serif" } },
+                Body1 = { LineHeight = 2 }
             },
         };
 
