--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationFormComponent.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationFormComponent.razor
@@ -45,7 +45,7 @@
             </div>
 
 
-            <div id="authorizationSuccess" class="mt-2" hidden="@(!AuthorizeSucceeded)">
+            <div id="authorizationSuccess" class="d-flex justify-center mt-2" hidden="@(!AuthorizeSucceeded)">
 
                 <MudText Color="Color.Success" Typo="Typo.h5">Authorized</MudText>
 
